# Icelauncher

./: Cargo.toml  README.md  icelauncher-theme-switcher.sh
.github/old_workflows/: rust_arch.yml  rust_fedora.yml  rust_ubuntu.yml
.github/workflows/: rust_arch.yml  rust_ubuntu.yml
src/: color.rs  helpers.rs  main.rs  ron.rs  subscription.rs  update.rs  view.rs
src/helpers/: calc.rs  color.rs  desktop.rs  filter.rs  font.rs  footer.rs  frecency.rs  fuzzy.rs  icon.rs  launch.rs  layout.rs  mod.rs  monitor.rs  results.rs  scroll.rs  search_bar.rs  style.rs  text.rs  update_helpers.rs  widget.rs
src/tests/: color_tests.rs  desktop_tests.rs  font_tests.rs  icon_tests.rs  launch_tests.rs  misc_tests.rs  mod.rs  scroll_tests.rs  text_tests.rs  update_tests.rs
themes/brutalist_concrete/: config.ron
themes/catppuccin/: config.ron
themes/dracula/: config.ron
themes/everforest/: config.ron
themes/frutiger_aero/: config.ron
themes/gothppuccin/: config.ron
themes/gruvbox/: config.ron
themes/gruvbox_wife/: config.ron
themes/i3status_votex/: config.ron
themes/material_deep_ocean/: config.ron
themes/minimal_black/: config.ron
themes/monokai/: config.ron
themes/neon_dystopia/: config.ron
themes/nord/: config.ron
themes/one_dark/: config.ron
themes/oxocarbon/: config.ron
themes/rose_pine/: config.ron
themes/rose_pine_dawn/: config.ron
themes/sakura_terminal/: config.ron
themes/solarized/: config.ron
themes/tokyo_night/: config.ron
themes/votex/: config.ron
