[package]
name = "icelauncher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "icelauncher"

[dependencies]
tokio	= { version = "1.50.0", features = ["rt-multi-thread", "macros", "process", "time"] }
iced 	= { version = "0.14.0", features = ["tokio", "image", "svg"] }
serde	= { version = "1.0.228", 	features = ["derive"] }
iced_layershell = "0.17.1"
async-stream    = "0.3.6"
futures         = "0.3.32"
home            = "0.5.12"
ron             = "0.12.1"
