[package]
name = "icelauncher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "icelauncher"

[dependencies]
tokio	= { version = "1.50.0", features = ["rt-multi-thread", "macros", "process", "time"] }
iced 	= { version = "0.14.0", features = ["tokio", "image", "svg"] }
serde	    = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0"
iced_layershell = "0.17.1"
async-stream    = "0.3.6"
futures         = "0.3.32"
home            = "0.5.12"
ron             = "0.12.1"
fasteval        = "0.2.4"
which = "8.0.2"
rayon = "1.10"
memchr = "2.7"
strsim = "0.11.1"
display-info = "0.5.9"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
